tests/ui/consts/const-ptr-is-null.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-ptr-is-null.rs:22:14
   |
LL |     assert!(!ptr.wrapping_sub(512).is_null());
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation panicked: null-ness of this pointer cannot be determined in const context
   |
note: inside `std::ptr::const_ptr::<impl *const i32>::is_null`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL
note: inside `std::ptr::const_ptr::<impl *const T>::is_null::compiletime`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
